buildscript {
    ext {
        queryDslVersion = "5.0.0"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'encore'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'


    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-crypto'

    // OAuth
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    runtimeOnly 'com.h2database:h2'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Swagger UI - spring doc
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

    // Querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // Komoran
    implementation 'com.github.shin285:KOMORAN:3.3.9'

    // Monitoring
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    // Jsoup
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0'
    implementation 'io.github.bonigarcia:webdrivermanager:5.0.3'

    //fcm
    implementation 'com.google.firebase:firebase-admin:9.1.1'

    //batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'

    // Quartz
    implementation 'org.springframework.boot:spring-boot-starter-quartz'

    // csv parsing
    implementation 'org.apache.commons:commons-csv:1.14.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation 'org.assertj:assertj-core:3.26.3'
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty "spring.profiles.active", "test"
    jvmArgs "-Dfile.encoding=UTF-8" // 한글 로그 깨짐 방지
}

processResources {
    from("src/main/resources") {
        include "**/*.json"
    }
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}